<resources>
    <string name="app_name">P-Phone Blog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signUp_logo">Sign Up Logo</string>
    <string name="login_logo">Login Logo</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="on_list_username">Osehi Ehilen</string>
    <string name="how_long_was_post_made">Since When</string>
    <string name="edit_button">Edit Button</string>
    <string name="post_title">Title</string>
    <string name="post_description">Apple\'s new flagship phone is out\nand it definately has people talking.\nSo what\'s special
    about new\ninstallment</string>
    <string name="post_image">List Feed Post Image</string>
    <string name="add_image">Add Image</string>
    <string name="add_title">Title...</string>
    <string name="add_description">Description</string>
    <string name="add_publish">Publish</string>
    <string name="update">Update</string>
    <string name="update_image">Update Image</string>
    <string name="load_image">Choose Image</string>
</resources>
