<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/welcome"
        tools:context=".SignUp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="157dp"
            android:layout_height="71dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/signUp_logo"
            android:src="@drawable/signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameSId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/largeButtonTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/emailSId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameSId" />

        <EditText
            android:id="@+id/passwordSId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSId" />

        <EditText
            android:id="@+id/confirmpswdSId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSId" />

        <Button
            android:id="@+id/signUpSId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_corner"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/largeButtonTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpswdSId" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpSId" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>