<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/welcome"
        tools:context=".Login">


        <ImageView
            android:id="@+id/loginLId"
            android:contentDescription="@string/login_logo"
            android:layout_width="166dp"
            android:layout_height="53dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/loginnow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameLId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginLId" />

        <EditText
            android:id="@+id/passwordLId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLId" />

        <Button
            android:id="@+id/loginButtonLId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_corner"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/largeButtonTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLId" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="406dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>