<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:paddingRight="8dp"
    android:paddingLeft="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:background="@color/cardView_Own_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImageListFeedId"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/osehi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/usernameListId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/userImageListFeedId"
                    app:layout_constraintTop_toTopOf="@+id/userImageListFeedId"
                    tools:text="@string/on_list_username" />

                <TextView
                    android:id="@+id/listFeedPostDurationId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/usernameListId"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/usernameListId"
                    app:layout_constraintTop_toBottomOf="@+id/usernameListId"
                    tools:text="@string/how_long_was_post_made" />

                <ImageButton
                    android:id="@+id/listFeedEditOptionId"
                    android:layout_width="32dp"
                    android:layout_height="41dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/edit_button"
                    app:backgroundTint="@color/cardView_Own_background"
                    app:layout_constraintBottom_toBottomOf="@+id/listFeedPostDurationId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/usernameListId"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_more_vert_black_24dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/listFeedPostImageId"
                android:contentDescription="@string/post_image"
                android:layout_width="111dp"
                android:layout_height="93dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:srcCompat="@drawable/post1" />

            <TextView
                android:id="@+id/listFeedTitleId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.069"
                app:layout_constraintStart_toEndOf="@+id/listFeedPostImageId"
                app:layout_constraintTop_toTopOf="@+id/listFeedPostImageId"
                tools:text="@string/post_title" />

            <TextView
                android:id="@+id/listFeedDescriptionId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/listFeedTitleId"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/listFeedTitleId"
                app:layout_constraintTop_toBottomOf="@+id/listFeedTitleId"
                tools:text="@string/post_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>