<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.UpdatePost">


    <ImageView
        android:id="@+id/editImageUpdateId"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:contentDescription=""
        android:src="@drawable/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTitleUpdateId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:textSize="@dimen/largeButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editImageUpdateId" />

    <EditText
        android:id="@+id/editDescriptionUpdateId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/add_description"
        android:inputType="textMultiLine"
        android:paddingBottom="280dp"
        android:textSize="@dimen/largeButtonTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitleUpdateId" />

    <Button
        android:id="@+id/editUpdateButtonId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edge_primary"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/largeButtonTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescriptionUpdateId" />
</androidx.constraintlayout.widget.ConstraintLayout>